--- a/main.html
+++ b/main.html
@@ -11,6 +11,27 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<nav>
+		<ul>
+			<li>
+				<a href="https://www.youtube.com/watch?v=iwnWHs8CBgQ&list=PL5te-TuAz-C1UcKAbJCVyfEto1d_nGhXv&index=2&t=28s">song1</a>
+			</li>
+			<li>
+				<a href="https://www.youtube.com/watch?v=mkmG4pWZd70&list=PL5te-TuAz-C1UcKAbJCVyfEto1d_nGhXv&index=3">song2</a>
+			</li>
+			<li>
+				<a href="https://www.youtube.com/watch?v=LDqnvItsENU&list=PL5te-TuAz-C1UcKAbJCVyfEto1d_nGhXv&index=4">song3</a>
+			</li>
+		</ul>
+	</nav>
+
+	<section>
+		<h1>3 random audios</h1>
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" controls>audio1</audio>
+		<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls>audio2</audio>
+		<audio src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" controls>audio3</audio>
+	</section>
+
 </body>
 
 </html>
